--- a/login.css
+++ b/login.css
@@ -10,7 +10,7 @@ div{
 
 body{
     color: aliceblue;
-    background-color: rgb(6, 5, 32);
+    background-color: rgb(21, 19, 70);
 }
 div h1{
     margin-left: 20px;
@@ -27,6 +27,7 @@ label{
     border: none;
     border-bottom: 1px solid rgb(255, 255, 255);   
     width: 90%;
+    color: aliceblue;
 }
 #ib{
     width: 80%;
@@ -46,3 +47,5 @@ li{
     list-style-type: none;
     margin-top: 10px;
 }
+
+
