--- a/busca.css
+++ b/busca.css
@@ -1,23 +1,30 @@
-input{
+input {
   background-color: rgb(255, 255, 255); 
   color:black; 
   height: 60px; 
   border-radius: 50px; 
   width: 360px; 
   font-size: 25px; 
+  float: left;
+  box-shadow: 0px 2.5px 3px 2.5px rgb(171, 188, 208); 
+  border: none;
+  margin-top: 10px;
 }
 input::placeholder{
-  background-image: linear-gradient(to right,rgb(255, 0, 111),rgb(51, 0, 51));
-  width: 100%;
+  background-image: linear-gradient(to right,rgb(203, 71, 255),rgb(112, 157, 255));
+  width: 80px;
   color: white;
   padding: 20px;
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-#bntBusca{
-  width: 50px;
-  height: 50px;
+#imgg{
+  width: 55px;
+  height: 55px;
+  float: left;
+  margin-left: 10px;
+  border-radius: 50%;
 }
 
 
