--- a/cad-pessoa.css
+++ b/cad-pessoa.css
@@ -5,7 +5,24 @@ form{
 input{
     margin-bottom: 10px;
     
+    
+}
+input, select{
+    background-color: rgb(171, 179, 220);
+    border: none;
+    border-bottom: 1px solid rgb(26, 21, 74);
+}
+select{
+    margin-bottom: 10px;
 }
 h1{
     text-align: center;
+}
+div{
+    background-color: rgb(171, 179, 220);
+    width: 400px;
+    margin-left: 450px;
+    border-radius: 50px;
+    display: block;
+    
 }
