--- a/cad-pessoa.css
+++ b/cad-pessoa.css
@@ -4,8 +4,7 @@ form{
 }
 input{
     margin-bottom: 10px;
-    
-    
+
 }
 input, select{
     background-color: rgb(171, 179, 220);
@@ -24,5 +23,22 @@ div{
     margin-left: 450px;
     border-radius: 50px;
     display: block;
+    height: 500px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif
     
+}
+#cidade{
+    width: 180px;
+}
+#estado{
+    width: 180px;
+}
+#cadastrar{
+    width: 80%;
+    margin-left: 10px;
+    margin-top: 10px;
+    height: 50px;
+    background-color: rgb(146, 11, 11);
+    border: none;
+    border-radius: 97px;
 }
